# celeborn-code

./: .gitignore  README.md  celeborn.py  llms.txt  pyproject.toml
.github/workflows/: publish-pypi.yml  release.yml
scripts/: celeborn.py
tests/: test_celeborn.py  test_installer.py
