[build-system]
requires = ["setuptools>=77"]  # >=77 for PEP 639 SPDX license expression (license = "BUSL-1.1")
build-backend = "setuptools.build_meta"

[project]
name = "celeborn-code"
version = "0.3.0"
description = "Persistent memory for AI coding agents — works with Claude Code, Cursor, Codex, ChatGPT, Grok Build, and other AI coding assistants. A long-term context substrate on disk plus a multi-agent kanban board: sessions survive compaction, restarts, and /clear, and stop re-explaining the project. Installs the `celeborn` command."
readme = "README.md"
# This package is the THIN INSTALLER (BUSL 1.1 — SPDX: BUSL-1.1; converts to Apache-2.0 four years
# after each version's release; full terms + Additional Use Grant + Supplemental Terms in LICENSE).
# The Celeborn client itself ships as a compiled binary (all rights reserved) that this installer
# downloads and sha256-verifies from https://github.com/cloud-dancer-labs/celeborn-releases.
# Versions <= 0.2.1 of this package shipped full BUSL source; they remain so on PyPI and in git
# history, and hit their Change Date (-> Apache-2.0) on schedule.
license = "BUSL-1.1"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [{ name = "Cloud Dancer" }]
maintainers = [{ name = "Thot Technologies LLC" }]
keywords = [
    "llm", "agents", "memory", "context", "claude", "coding-agents",
    "claude-code", "cursor", "codex", "chatgpt", "grok", "ai-coding", "agent-memory",
    "persistent-memory", "context-window", "context-management", "kanban", "multi-agent",
    "developer-tools",
]
classifiers = [
    # NOTE: No "License ::" trove classifier here — PEP 639 forbids pairing a License-Expression
    # (the `license = "BUSL-1.1"` above) with a License classifier. PyPI renders BUSL-1.1 from the
    # SPDX expression. ("Private :: Do Not Upload" is also intentionally absent — it makes PyPI
    # REJECT the upload.)
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = []  # stdlib only — the installer is one file with no imports beyond the standard library

[project.urls]
Homepage = "https://celeborncode.ai"
Repository = "https://github.com/cloud-dancer-labs/celeborn-code"
Issues = "https://github.com/cloud-dancer-labs/celeborn-code/issues"

[project.scripts]
celeborn = "celeborn:main"
cel = "celeborn:main"

[tool.setuptools]
# The whole package is the single thin-installer module at the repo root: it resolves the platform,
# downloads the version-pinned binary tarball from celeborn-releases, verifies its sha256 against
# the checksums stamped into the module, places the binary under ~/.celeborn/bin, and execs it.
py-modules = ["celeborn"]
